# KAI_Telegram_Bot

./: .env.dist  .gitignore  Pipfile  README.md  bot.py  pyproject.toml
stub/: .env.dist  Dockerfile  bot.py  docker-compose.yml
tgbot/: config.py
tgbot/filters/: __init__.py  admin.py
tgbot/handlers/: __init__.py  admin_commands.py  commands.py  details.py  education.py  errors.py  full_schedule.py  group_choose.py  main_menu.py  my_group.py  other.py  profile.py  schedule.py  settings.py  teachers.py  user.py  verification.py
tgbot/keyboards/: inline_keyboards.py  reply_keyboards.py
tgbot/locales/en/LC_MESSAGES/: kai_bot.po
tgbot/locales/ru/LC_MESSAGES/: kai_bot.po
tgbot/locales/tt/LC_MESSAGES/: kai_bot.po
tgbot/middlewares/: __init__.py  bot_typing.py  language.py  languages.py  throttling.py  user_checker.py
tgbot/misc/: callbacks.py  messages.py  possible_parity.txt  states.py
tgbot/misc/texts/: __init__.py  buttons.py  messages.py  reply_commands.py  rights.py  roles.py  templates.py
tgbot/services/: kai_helper.py  kai_parser.py  utils.py
tgbot/services/database/: __init__.py  group.py  models.py  schedule.py  utils.py
tgbot/services/database/models/: __init__.py  group.py  groupteacher.py  homework.py  language.py  right.py  role.py  user.py
tgbot/services/database/models/kai/: __init__.py  department.py  discipline.py  group.py  (+9 more)
tgbot/services/kai_parser/: helper.py  parser.py  schemas.py  utils.py
tgbot/services/schedulers/: __init__.py  update_schedule.py
tgbot/services/utils/: __init__.py  other.py  texts.py  verification.py
