[tool.poetry]
name = "kai-telegram-bot"
version = "0.1.0"
description = ""
authors = ["PrinterOMG <PrinterOMG@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "2.*"
redis = "^5.0.1"
environs = "^9.5.0"
asyncpg = "^0.28.0"
aiohttp = "^3.8.5"
iso-language-codes = "^1.1.0"
sqlalchemy = {version = "^2.0.21", extras = ["asyncio"]}
aioredis = "^2.0.1"
phonenumbers = "^8.13.21"
bs4 = "^0.0.1"
aioschedule = "^0.5.2"
pydantic = "^2.4.2"
alembic = "^1.12.0"
lxml = "^4.9.3"


[tool.poetry.group.dev.dependencies]
pybabel = "^0.0.0.dev0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
