[tool.poetry]
name = "kai-telegram-bot"
version = "0.1.0"
description = ""
authors = ["PrinterOMG <PrinterOMG@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = {extras = ["i18n"], version = "^3.1.1"}
redis = "^5.0.1"
environs = "^9.5.0"
asyncpg = "^0.28.0"
aiohttp = "^3.8.5"
iso-language-codes = "^1.1.0"
sqlalchemy = {version = "^2.0.21", extras = ["asyncio"]}
phonenumbers = "^8.13.21"
bs4 = "^0.0.1"
pydantic = "<2.4"
alembic = "^1.12.0"
lxml = "^4.9.3"
ujson = "^5.8.0"
uvloop = "^0.19.0"
apscheduler = "^3.10.4"


[tool.poetry.group.dev.dependencies]
pybabel = "^0.0.0.dev0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
